--- a/forexglobal/about-us/licenses-and-regulations.html
+++ b/forexglobal/about-us/licenses-and-regulations.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="description" content="Forex24 is a European CySEC Regulated online broker providing contracts for difference on foreign exchange, shares, futures and precious metals primarily to retail clients.">
-  <title>KIDs - Forex24 Global</title>
+  <title>Licenses and Regulations - Forex24 Global</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
@@ -51,11 +51,11 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>About</b></li>
-                <li><a href="licenses-and-regulations.html">Licenses and Regulations</a></li>
+                <li><a>Licenses and Regulations</a></li>
                 <li><a href="security-of-funds.html">Security of Funds</a></li>
                 <li><a href="stp-broker.html">STP Broker</a></li>
                 <li><a href="#">Legal Documents</a></li>
-                <li><a>KIDs</a></li>
+                <li><a href="kids.html">KIDs</a></li>
                 <li><a href="careers.html">Careers</a></li>
               </ul>
             </div>
@@ -105,16 +105,41 @@
   </header>
   <section class="inner">
     <div class="container">
-      <h1 class="inner__name">KIDs</h1>
-      <div class="inner__icon  inner__icon--kids"></div>
-      <div class="inner__text">
-        <p>In order to help you better understand our products and services and the nature, risks, costs, potential gains and losses associated with them – we developed Key Information Documents (KIDs). These are categorised below into four major asset classes and include CFDs on Currency pairs, Indices, Commodities, Equities or other OTC derivative products.</p>
-        <p>If you have any questions, contact Forex24 customer support team at <a href="mailto:support@forex24.com">support@forex24.com</a>.</p>
-        <b>Key Information Documents</b>
-        <p><a href="../img/pdf/Key-Information-Document-Forex-v1.0.0.pdf" target="_blank">Forex CFDs</a></p>
-        <p><a href="../img/pdf/Key-Information-Document-Commodities-v1.0.0" target="_blank">Treasury and Commodities CFDs</a></p>
-        <p><a href="../img/pdf/Key-Information-Document-Indices-v1.0.0" target="_blank">Indices CFDs</a></p>
-        <p><a href="../img/pdf/Key-Information-Document-Stocks-v1.0.0" target="_blank">Stocks CFDs</a></p>
+      <h1 class="inner__name">Licenses and Regulations</h1>
+      <div class="inner__text  inner__text--cysec">
+        <h2>CySEC</h2>
+        <p>Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF Licence number <a href="https://www.cysec.gov.cy/en-GB/entities/investment-firms/cypriot/79086/" target="_blank">300/16</a> and Company registration number HE334292.</p>
+        <p>The Cyprus Securities and Exchange Commission (CySEC) was established in accordance with section 5 of the Cyprus Securities and Exchange Commission (Establishment and Responsibilities) Law of 2001 as a public legal entity.</p>
+        <b>CySEC aims to oversee and control the operation of financial exchange markets and the transactions performed within those markets. CySEC may:</b>
+        <ul>
+          <li>Supervise those who issue securities and list them on the Cyprus Stock Exchange.</li>
+          <li>Inspect brokers, companies, investment consultants and mutual fund management companies.</li>
+          <li>Issue licenses to operate to brokers, brokerage firms, investment firms and consultants.</li>
+          <li>Revoke licenses to operate as and when necessary.</li>
+          <li>Impose punitive sanctions on investment consultants, brokers and any other body which fall under the authority of CySEC.</li>
+        </ul>
+        <p>Lydya Financial Ltd is licensed by CySEC to offer the following Investment, Ancillary Services and Cross Border Services to Member States: Austria, Bulgaria, Croatia, Czech Republic, Denmark, Estonia, Finland, France, Germany, Greece, Hungary, Iceland, Ireland, Italy, Latvia, Liechtenstein, Lithuania, Luxembourg, Malta, Norway, Poland, Portugal, Romania, Slovakia, Slovenia, Spain, Sweden, The Netherlands, United Kingdom.</p>
+        <p>Lydya Financial Ltd. (CIF license number <a href="https://www.cysec.gov.cy/en-GB/entities/investment-firms/cypriot/79086/" target="_blank">300/16</a>), is regulated and licensed under the Cyprus Securities and Exchange Commission (CYSEC) to provide the following investment services in relation to the financial instruments stated further below:</p>
+        <b>Investment Services:</b>
+        <ul>
+          <li>Reception and Transmission of orders in relation to one or more Financial Instruments.</li>
+          <li>Execution of Orders.</li>
+        </ul>
+        <b>Ancillary Services:</b>
+        <ol>
+          <li>Safekeeping and administration of financial instruments for the account of clients, including custodianship and related services such as cash/collateral management.</li>
+          <li>Granting credits or loans to an investor to allow him to carry out a transaction in one or more financial instruments, where the firm granting the credit or loan is involved in the transaction.</li>
+          <li>Foreign exchange services where these are connected to the provision of investment services.</li>
+        </ol>
+      </div>
+      <div class="inner__text  inner__text--cysec">
+        <h2>EU Directives & Memberships</h2>
+        <b>Market in Financial Instruments Directive (MiFID)</b>
+        <p>The Markets in Financial Instruments (MiFID) directive 2004/39/EC came into effect on 1/11/2007 with the aim of regulating the markets of financial instruments and the provision of investment services and activities within the European Economic Area (EEA). The Directive was adopted in Cyprus through the Cyprus Investment Services and Activities and Regulated Markets Law of 2007 (<a href="https://www.cysec.gov.cy/CMSPages/GetFile.aspx?guid=60f8cf0b-08ba-4f4c-8208-1b50cda64d9f" target="
+          ">Law 144 (I)/2007</a>).</p>
+        <p>The key objectives of the European Union’s Markets in Financial Instruments Directive (MiFID) are: to improve levels of efficiency, to increase financial transparency, to promote competition and to effectively protect consumers. MiFID also allows investment firms to provide investment and ancillary services within the territory of another member state and/or a third country, provided that such services are covered by the investment firm’s.</p>
+        <b>Investor Compensation Fund (ICF)</b>
+        <p>Lydya Financial Ltd is a member of the <a href="../img/pdf/Investor-Compensation-Fund.pdf" target="_blank">Investor Compensation Fund (ICF)</a>, a scheme which serves to protect eligible retail clients by paying compensation in the event that a company fails to reimburse funds and/ or financial instruments due to financial issues, as applicable.</p>
       </div>
     </div>
   </section>
@@ -149,11 +174,11 @@
         <ul class="footer__ul  footer__ul--links">
           <li><b>About</b></li>
           <li><hr></li>
-          <li><a href="licenses-and-regulations.html">Licenses & Regulations</a></li>
+          <li><a class="footer__active">Licenses & Regulations</a></li>
           <li><a href="security-of-funds.html">Security Of Funds</a></li>
           <li><a href="stp-broker.html">STP Broker</a></li>
           <li><a href="#">Legal Documents</a></li>
-          <li><a class="footer__active">KIDs</a></li>
+          <li><a href="kids.html">KIDs</a></li>
           <li><a href="careers.html">Careers</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
