--- a/forexglobal/about-us/stp-broker.html
+++ b/forexglobal/about-us/stp-broker.html
@@ -51,7 +51,7 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>About</b></li>
-                <li><a href="#">Licenses and Regulations</a></li>
+                <li><a href="licenses-and-regulations.html">Licenses and Regulations</a></li>
                 <li><a href="security-of-funds.html">Security of Funds</a></li>
                 <li><a>STP Broker</a></li>
                 <li><a href="#">Legal Documents</a></li>
@@ -147,7 +147,7 @@
         <ul class="footer__ul  footer__ul--links">
           <li><b>About</b></li>
           <li><hr></li>
-          <li><a href="#">Licenses & Regulations</a></li>
+          <li><a href="licenses-and-regulations.html">Licenses & Regulations</a></li>
           <li><a href="security-of-funds.html">Security Of Funds</a></li>
           <li><a class="footer__active">STP Broker</a></li>
           <li><a href="#">Legal Documents</a></li>
