--- a/forexglobal/contact-us.html
+++ b/forexglobal/contact-us.html
@@ -51,7 +51,7 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>About</b></li>
-                <li><a href="#">Licenses and Regulations</a></li>
+                <li><a href="about-us/licenses-and-regulations.html">Licenses and Regulations</a></li>
                 <li><a href="about-us/security-of-funds.html">Security of Funds</a></li>
                 <li><a href="about-us/stp-broker.html">STP Broker</a></li>
                 <li><a href="#">Legal Documents</a></li>
@@ -164,7 +164,7 @@
         <ul class="footer__ul  footer__ul--links">
           <li><b>About</b></li>
           <li><hr></li>
-          <li><a href="#">Licenses & Regulations</a></li>
+          <li><a href="about-us/licenses-and-regulations.html">Licenses & Regulations</a></li>
           <li><a href="about-us/security-of-funds.html">Security Of Funds</a></li>
           <li><a href="about-us/stp-broker.html">STP Broker</a></li>
           <li><a href="#">Legal Documents</a></li>
