--- a/investix/en/about/privacy-policy.html
+++ b/investix/en/about/privacy-policy.html
@@ -52,7 +52,7 @@
               <div id="google_translate_element"></div>
               <script type="text/javascript">
                 function googleTranslateElementInit() {
-                  new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'en,ru', layout: google.translate.TranslateElement.FloatPosition.TOP_LEFT, autoDisplay: false}, 'google_translate_element');
+                  new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'iw', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, autoDisplay: false}, 'google_translate_element');
                 }
               </script>
               <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
