--- a/investix/ru/education/our-service.html
+++ b/investix/ru/education/our-service.html
@@ -55,7 +55,7 @@
               </ul>
             </li>
             <li><a class="nav__chat" href="../trading-room.html">Chat Room</a></li>
-            <li>
+            <!-- <li>
               <div id="google_translate_element"></div>
               <script type="text/javascript">
                 function googleTranslateElementInit() {
@@ -63,7 +63,7 @@
                 }
               </script>
               <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-            </li>
+            </li> -->
             <li>
               <select class="nav__select">
                 <option value="en">EN</option>
@@ -107,13 +107,13 @@
         <p>персональный<br>управляющий</p>
       </div>
       <div class="badge__box  badge__box--4">
-        <p>персональный<br>управляющий</p>
+        <p>Портфельное<br>Инвестирование</p>
       </div>
       <div class="badge__box  badge__box--5">
-        <p>персональный<br>управляющий</p>
+        <p>Money<br>Managament</p>
       </div>
       <div class="badge__box  badge__box--6">
-        <p>персональный<br>управляющий</p>
+        <p>Обучение<br>Торговле</p>
       </div>
     </div>
     <section class="text">
