--- a/mm/index.html
+++ b/mm/index.html
@@ -27,13 +27,13 @@
       <div class="video__header">
         <header class="header">
           <nav class="main-nav">
-            <img src="img/logo-w.svg" width="180" height="auto" alt="MultiplyMarket">
+            <img class="header__logo" src="img/logo-w.svg" alt="MultiplyMarket">
             <ul class="sub-nav">
                 <li>
-                  <a class="sub__title">Accounts</a>
+                  <a class="sub__title  lang-accounts">Accounts</a>
                   <ul class="sub-nav__list">
-                      <li><a href="templates/about-us.html">Trade with<br>MultiplyMarket</a></li>
-                      <li><a href="templates/account-types.html">Account types</a></li>
+                      <li><a class="lang-trade-with-mm" href="templates/about-us.html">Trade with<br>MultiplyMarket</a></li>
+                      <li><a class="lang-account-types" href="templates/account-types.html">Account types</a></li>
                       <li><a href="templates/segregated.html">Segregated account</a></li>
                       <li><a href="https://clients.multiplymarket.com/register">Open live account</a></li>
                   </ul>
@@ -61,7 +61,7 @@
               <a class="button" href="https://clients.multiplymarket.com/register">Open live account</a>
               <a class="button  button--blue" href="https://clients.multiplymarket.com/">Log In</a>
               <a class="button  button--number" href="tel:++442038290032">+442038290032</a>
-              <select class="main-nav__select">
+              <select class="main-nav__select" id="languageSelector">
                   <option value="EN">EN</option>
                   <option value="RU">RU</option>
               </select>
@@ -260,5 +260,7 @@
   <script src="js/jquery.min.js"></script>
   <script src="js/slick/slick.min.js"></script>
   <script src="js/slider.js"></script>
+  <script src="js/language.js"></script>
+  <script src="js/dict.js"></script>
 </body>
 </html>
